Fixing navbar item alignment & adding fonts/color

--- a/style.css
+++ b/style.css
@@ -21,25 +21,33 @@ body{
     flex: 1;
     flex-direction: row;
     flex-wrap: wrap;
-    align-content: flex-end;
     justify-content: flex-end;
+    font-family: 'Arial Rounded MT Bold', Helvetica, sans-serif;
+    color: white;
 } 
 
 .nav-item{
     height: 30px;
-    width: 120px;
+    width: 100px;
     display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .nav-image{
-    height: 100px;
-    width: 100px;
+    height: 50px;
+    width: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .logo-title{
     display: flex;
     align-self: center;
-
+    font-weight: bold;
+    font-family: 'Arial Rounded MT Bold', Helvetica, sans-serif;
+    color: white;
 }
 
 .hero{
